src/objects/Expedite_Request__c.object
<CustomObject>
    <description>Custom Object for tracking Expedite Request Cases on Sales Orders.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;   Sales_Order__r.Opportunity__r.Account.Id , Sales_Order__r.Opportunity__r.Account.Name,&quot;_self&quot;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_To_Overnight__c</fullName>
        <inlineHelpText>If you checked the box above to overnight, please copy and paste the approval to overnight.</inlineHelpText>
        <label>Approval To Overnight</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Ship_Date__c</fullName>
        <formula>Sales_Order__r.Shipment_Date__c</formula>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Current Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedite_Status__c</fullName>
        <label>Expedite Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Sched_Ship_Date_Update__c</fullName>
        <label>Last Sched Ship Date Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opp_Team_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Team 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expedite_Requests45H3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Team_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Team 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expedite_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Team_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Team 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expedite_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Sales_Order__r.Opportunity__r.Id, Sales_Order__r.Opportunity__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overnight__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to overnight this Sales Order.</inlineHelpText>
        <label>Overnight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_For_Expedite__c</fullName>
        <inlineHelpText>Please explain why you are requesting this expedite.</inlineHelpText>
        <label>Reason For Expedite</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Name__c</fullName>
        <formula>Sales_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Sales Order Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <formula>Sales_Order__r.SO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expedite_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Sales_Area__c</fullName>
        <formula>Sales_Order__r.Sales_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type__c</fullName>
        <formula>TEXT(Sales_Order__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Sales Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This field is auto filled so no edits are needed.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Expedite Requests</relationshipLabel>
        <relationshipName>Expedite_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <formula>Sales_Order__r.Ship_To_Address_1__c  &amp;  BR()  &amp;  Sales_Order__r.Ship_To_Address_2__c  &amp;  BR()  &amp;  Sales_Order__r.Ship_To_City__c  &amp; &quot;,&quot;  &amp;  Sales_Order__r.Ship_to_State__c  &amp;  Sales_Order__r.Ship_To_Zip_Postal_Code__c  &amp;  BR()  &amp;  Sales_Order__r.Ship_To_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer__c</fullName>
        <formula>Sales_Order__r.Ship_To_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Ship to Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Install_Date__c</fullName>
        <inlineHelpText>Date of customer install. Order Management will utilize this field in order to determine shipment date.</inlineHelpText>
        <label>Target Install Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Sales_Order__r.Sales_Order_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-populated. No further information needed.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expedite Request</label>
    <listViews>
        <fullName>Closed_Expedite_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Current_Ship_Date__c</columns>
        <columns>Target_Install_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expedite_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Expedite Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Expedite_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SO_Number__c</columns>
        <columns>Opp_Team_1__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Current_Ship_Date__c</columns>
        <columns>Target_Install_Date__c</columns>
        <columns>Reason_For_Expedite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expedite_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Expedite Requests</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{000000}</displayFormat>
        <label>Expedite Request Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expedite Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approval_to_Overnight_Required_if_Overni</fullName>
        <active>true</active>
        <description>Makes Approval to Overnight field required if Overnight field is checked</description>
        <errorConditionFormula>Overnight__c  = True  &amp;&amp;  ISBLANK( Approval_To_Overnight__c )</errorConditionFormula>
        <errorDisplayField>Approval_To_Overnight__c</errorDisplayField>
        <errorMessage>If Overnight is checked, Approval to Overnight is required.  Please complete the Approval to Overnight field.</errorMessage>
    </validationRules>
</CustomObject>